--- a/myApp/src/pages/about/about.html
+++ b/myApp/src/pages/about/about.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Share
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <h2> Nothing </h2>
 </ion-content>
