Local Storage is ok

--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -9,7 +9,7 @@
   <p> 
   This app makes spliting a tab with your friends very easy.
   </p>
-  <button ion-button outline>Load Items from QRCode</button>
+  <button ion-button outline (click)="testTs()">Load Items from QRCode</button>
   <button ion-button outline>Load Items from URI</button>
   <button ion-button color="danger" outline>Clear everything and Start Over</button>
 
