--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -7,11 +7,11 @@
 <ion-content padding>
   <h2>Welcome to TabSplit</h2>
   <p> 
-  This app makes spliting a tab with your friends very easy.
+  This app makes spliting a tab with your friends very easy. {{data}}.
   </p>
-  <button ion-button outline (click)="testTs()">Load Items from QRCode</button>
-  <button ion-button outline>Load Items from URI</button>
-  <button ion-button color="danger" outline>Clear everything and Start Over</button>
+  <button ion-button outline (click)="loadItems()">Load Items from QRCode</button>
+  <button ion-button outline (click)="loadItems()">Load Items from URI</button>
+  <button ion-button color="danger" outline  outline (click)="clearItems()">Clear everything and Start Over</button>
 
   <ion-item>
     <ion-badge>0</ion-badge> Friends 
