--- a/myApp/src/pages/about/about.html
+++ b/myApp/src/pages/about/about.html
@@ -7,5 +7,43 @@
 </ion-header>
 
 <ion-content padding>
-  <h2> Nothing </h2>
+  <ion-list>
+    <ion-item>
+      <ion-input type="text" value="{{name}}" placeholder="Name"></ion-input>
+    </ion-item>
+  </ion-list>
+  <button ion-button outline>Add Person</button>
+  <ion-list>
+    <ion-item>
+      <ion-input type="text" value="{{iname}}" placeholder="Name"></ion-input>
+      <ion-input type="number" value="{{iprice}}" placeholder="Price"></ion-input>
+      <ion-input type="number" value="{{iqty}}" placeholder="Quantity"></ion-input>
+    </ion-item>
+  </ion-list>
+  <button ion-button outline>Add Person</button>
+
+
+  <ion-card *ngFor="let p of people">
+    <ion-card-header>
+      <button ion-button outline>{{p.name}}</button>
+    </ion-card-header>
+    <ion-card-content>
+        <ion-card *ngFor="let i of p.items">
+          {{i}}
+        </ion-card>
+    </ion-card-content>
+  </ion-card>
+  <ion-card *ngFor="let i of items">
+    <ion-card-header>
+      {{i.name}}
+    </ion-card-header>
+    <ion-card-content>
+      <ion-badge item-right>
+        ${{i.price}}
+      </ion-badge>
+      <ion-badge item-right>
+        #{{i.quantity}}
+      </ion-badge>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
