--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -7,16 +7,58 @@
 <ion-content padding>
   <h2>Welcome to TabSplit</h2>
   <p> 
-  This app makes spliting a tab with your friends very easy. {{data}}.
+    This app makes spliting a tab with your friends very easy.
   </p>
-  <button ion-button outline (click)="loadItems()">Load Items from QRCode</button>
-  <button ion-button outline (click)="loadItems()">Load Items from URI</button>
-  <button ion-button color="danger" outline  outline (click)="clearItems()">Clear everything and Start Over</button>
+  <button ion-button outline block (click)="loadItems()">Load Items from QRCode</button>
+  <button ion-button color="danger" outline block (click)="clearItems()">Clear everything and Start Over</button>
 
-  <ion-item>
-    <ion-badge>0</ion-badge> Friends 
-  </ion-item>
-  <ion-item>
-    <ion-badge>0</ion-badge> Items
-  </ion-item>
+  <p> 
+    Add friends manually:
+  </p>
+
+  <ion-list>
+    <ion-item>
+      <ion-input type="text" value="{{name}}" placeholder="Name"></ion-input>
+    </ion-item>
+  </ion-list>
+  <button ion-button outline block>Add Friend</button>
+
+  <p> 
+    Add items manually:
+  </p>
+
+  <ion-list>
+    <ion-item>
+      <ion-input type="text" value="{{iname}}" placeholder="Name"></ion-input>
+      <ion-input type="number" value="{{iprice}}" placeholder="Price"></ion-input>
+      <ion-input type="number" value="{{iqty}}" placeholder="Quantity"></ion-input>
+    </ion-item>
+  </ion-list>
+  <button ion-button outline block>Add Item</button>
+
+    <ion-item>
+      <ion-badge>{{friends.length}}</ion-badge> Friends 
+    </ion-item>
+    <ion-item>
+      <ion-badge>{{items.length}}</ion-badge> Items
+    </ion-item>
+
+    <h2> Friends: </h2>
+  <ion-list>
+    <ion-item *ngFor="let f of friends">
+      {{f}}
+    </ion-item>
+  </ion-list>
+    <h2> Items: </h2>
+  <ion-list>
+    <ion-item *ngFor="let i of items">
+      {{i.name}}
+      <ion-badge item-right>
+        ${{i.price}}
+      </ion-badge>
+      <ion-badge item-right>
+        #{{i.quantity}}
+      </ion-badge>
+    </ion-item>
+  </ion-list>
 </ion-content>
