--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -18,10 +18,13 @@
 
   <ion-list>
     <ion-item>
-      <ion-input type="text" value="{{name}}" placeholder="Name"></ion-input>
+      <ion-input type="text" 
+        [(ngModel)]="name" 
+        placeholder="Name"></ion-input>
     </ion-item>
   </ion-list>
-  <button ion-button outline block>Add Friend</button>
+  <button ion-button outline block
+    (click)="addFriend()">Add Friend</button>
 
   <p> 
     Add items manually:
@@ -29,12 +32,19 @@
 
   <ion-list>
     <ion-item>
-      <ion-input type="text" value="{{iname}}" placeholder="Name"></ion-input>
-      <ion-input type="number" value="{{iprice}}" placeholder="Price"></ion-input>
-      <ion-input type="number" value="{{iqty}}" placeholder="Quantity"></ion-input>
+      <ion-input type="text" 
+        [(ngModel)]="iname" 
+        placeholder="Name"></ion-input>
+      <ion-input type="number" 
+        [(ngModel)]="iprice" 
+        placeholder="Price"></ion-input>
+      <ion-input type="number" 
+        [(ngModel)]="iqty" 
+        placeholder="Quantity"></ion-input>
     </ion-item>
   </ion-list>
-  <button ion-button outline block>Add Item</button>
+  <button ion-button outline block 
+    (click)="addItem()">Add Item</button>
 
     <ion-item>
       <ion-badge>{{friends.length}}</ion-badge> Friends 
