--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -71,4 +71,6 @@
       </ion-badge>
     </ion-item>
   </ion-list>
+  <button ion-button outline block 
+    (click)="goToSharePage()">Start Sharing</button>
 </ion-content>
