--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -108,6 +108,8 @@
     </ion-card-content>
   </ion-card>
 
-  <button ion-button outline block 
-          (click)="goToSharePage()">Start Sharing</button>
+  <button ion-button block 
+          color="secondary"
+          (click)="goToSharePage()">
+    Start Sharing</button>
 </ion-content>
