--- a/myApp/src/pages/contact/contact.html
+++ b/myApp/src/pages/contact/contact.html
@@ -5,13 +5,67 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+
+  <ion-card *ngFor="let p of appState.friends">
+    <ion-card-header>
+      <button ion-button outline block
+        (click)="payFor(p)"
+        color="danger">
+        {{p.name}} needs to pay for:
+      </button>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-card>
+        <ion-card-header>Total</ion-card-header>
+        <ion-card-content>
+          ${{p.total()}}
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngFor="let i of p.items">
+        <ion-card-header>
+          {{i.name}}
+        </ion-card-header>
+        <ion-card-content>
+          <ion-badge item-right color="danger">
+            ${{i.priceRemSh()}}
+          </ion-badge>
+          <ion-badge item-right color="danger">
+            #{{i.quantityRemSh()}}
+          </ion-badge>
+        </ion-card-content>
+      </ion-card>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngFor="let p of appState.paid">
+    <ion-card-header>
+      <button ion-button outline block
+        (click)="unpayFor(p)"
+        color="balanced">
+        {{p.name}} will take care of these.
+      </button>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-card>
+        <ion-card-header>Total</ion-card-header>
+        <ion-card-content>
+          ${{p.total()}}
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngFor="let i of p.items">
+        <ion-card-header>
+          {{i.name}}
+        </ion-card-header>
+        <ion-card-content>
+          <ion-badge item-right color="balanced">
+            ${{i.priceRemSh()}}
+          </ion-badge>
+          <ion-badge item-right color="balanced">
+            #{{i.quantityRemSh()}}
+          </ion-badge>
+        </ion-card-content>
+      </ion-card>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
