--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -14,6 +14,8 @@
   -->
   <button ion-button color="danger" outline block (click)="clearItems()">Clear everything and Start Over</button>
 
+  <button ion-button outline block (click)="scan()">Input from QRCode </button>
+
   <ion-card>
     <ion-card-header>
       <h2> 
